// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > renders with filter and searchTerm correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-akar-popper-content-wrapper="" style="position: fixed; left: 0px; top: 0px; transform: translate(0, -200%); min-width: max-content;">
  <div role="menu" aria-orientation="vertical" data-akar-menu-content="" data-state="open" dir="ltr" tabindex="-1" data-orientation="vertical" style="pointer-events: auto; --akar-dropdown-menu-content-transform-origin: var(--akar-popper-transform-origin); --akar-dropdown-menu-content-available-width: var(--akar-popper-available-width); --akar-dropdown-menu-content-available-height: var(--akar-popper-available-height); --akar-dropdown-menu-trigger-width: var(--akar-popper-anchor-width); --akar-dropdown-menu-trigger-height: var(--akar-popper-anchor-height); animation: none; outline-color: none; outline-style: none; outline-width: initial;" data-dismissable-layer="" id="akar-dropdown-menu-content-v-0-0-0" aria-labelledby="" data-slot="content" data-side="bottom" data-align="center">
    <div data-slot="root" class="">
      <!--v-if--><input type="text" placeholder="Search…" data-slot="input" autocomplete="off" role="searchbox" value="No match value">
      <!--v-if-->
    </div>
    <!--v-if-->
    <div data-slot="empty" class="">No matching data</div>
  </div>
</div>




<!--teleport end-->"
`;

exports[`DropdownMenu > renders with item slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-akar-popper-content-wrapper="" style="position: fixed; left: 0px; top: 0px; transform: translate(0, -200%); min-width: max-content;">
  <div role="menu" aria-orientation="vertical" data-akar-menu-content="" data-state="open" dir="ltr" tabindex="-1" data-orientation="vertical" style="pointer-events: auto; --akar-dropdown-menu-content-transform-origin: var(--akar-popper-transform-origin); --akar-dropdown-menu-content-available-width: var(--akar-popper-available-width); --akar-dropdown-menu-content-available-height: var(--akar-popper-available-height); --akar-dropdown-menu-trigger-width: var(--akar-popper-anchor-width); --akar-dropdown-menu-trigger-height: var(--akar-popper-anchor-height); animation: none; outline-color: none; outline-style: none; outline-width: initial;" data-dismissable-layer="" id="akar-dropdown-menu-content-v-0-0-0" aria-labelledby="" data-slot="content" data-side="bottom" data-align="center">
    <!--v-if-->
    <div role="presentation" data-slot="viewport" class="">
      <div role="group" aria-labelledby="akar-menu-group-v-0-0-1" data-slot="group" class="">
        <div id="akar-menu-group-v-0-0-1" data-slot="label" class="">Item slot</div>
      </div>
      <div role="group" aria-labelledby="akar-menu-group-v-0-0-2" data-slot="group" class=""><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item=""><span class="iconify i-lucide:user" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">Profile<!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!----></span>
        </button><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item slot</button><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item slot</button></div>
      <div role="group" aria-labelledby="akar-menu-group-v-0-0-3" data-slot="group" class=""><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item slot</button><button role="menuitem" tabindex="-1" id="akar-menu-sub-trigger-v-0-0-4" aria-haspopup="menu" aria-expanded="false" aria-controls="" data-state="closed" type="button" data-slot="item" class="" data-akar-collection-item="">Item slot</button>
        <!---->
        <!--teleport start-->
        <!---->
        <!--teleport end--><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item slot</button>
      </div>
      <div role="group" aria-labelledby="akar-menu-group-v-0-0-5" data-slot="group" class=""><a href="https://github.com/vinicunca/pohon" role="menuitem" tabindex="-1" rel="noopener noreferrer" target="_blank" data-slot="item" data-akar-collection-item="">Item slot</a><a href="/components/dropdown-menu" role="menuitem" tabindex="-1" data-slot="item" data-akar-collection-item="">Item slot</a>
        <div role="separator" aria-orientation="horizontal" data-slot="separator" class=""></div><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item slot</button><button type="button" disabled="" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="" aria-disabled="true" data-disabled="">Item slot</button>
      </div>
      <div role="group" aria-labelledby="akar-menu-group-v-0-0-6" data-slot="group" class=""><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item slot</button></div>
    </div>
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`DropdownMenu > renders with item-leading slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-akar-popper-content-wrapper="" style="position: fixed; left: 0px; top: 0px; transform: translate(0, -200%); min-width: max-content;">
  <div role="menu" aria-orientation="vertical" data-akar-menu-content="" data-state="open" dir="ltr" tabindex="-1" data-orientation="vertical" style="pointer-events: auto; --akar-dropdown-menu-content-transform-origin: var(--akar-popper-transform-origin); --akar-dropdown-menu-content-available-width: var(--akar-popper-available-width); --akar-dropdown-menu-content-available-height: var(--akar-popper-available-height); --akar-dropdown-menu-trigger-width: var(--akar-popper-anchor-width); --akar-dropdown-menu-trigger-height: var(--akar-popper-anchor-height); animation: none; outline-color: none; outline-style: none; outline-width: initial;" data-dismissable-layer="" id="akar-dropdown-menu-content-v-0-0-0" aria-labelledby="" data-slot="content" data-side="bottom" data-align="center">
    <!--v-if-->
    <div role="presentation" data-slot="viewport" class="">
      <div role="group" aria-labelledby="akar-menu-group-v-0-0-1" data-slot="group" class="">
        <div id="akar-menu-group-v-0-0-1" data-slot="label" class="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">My account<!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!----></span>
        </div>
      </div>
      <div role="group" aria-labelledby="akar-menu-group-v-0-0-2" data-slot="group" class=""><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item=""><span class="iconify i-lucide:user" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">Profile<!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!----></span>
        </button><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">Billing<!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">b</kbd></span>
          <!----></span>
        </button><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">Settings<!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">?</kbd></span>
          <!----></span>
        </button></div>
      <div role="group" aria-labelledby="akar-menu-group-v-0-0-3" data-slot="group" class=""><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">Team<!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!----></span>
        </button><button role="menuitem" tabindex="-1" id="akar-menu-sub-trigger-v-0-0-4" aria-haspopup="menu" aria-expanded="false" aria-controls="" data-state="closed" type="button" data-slot="item" class="" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">Invite users<!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span class="iconify i-lucide:chevron-right" aria-hidden="true" data-slot="itemTrailingIcon"></span>
          <!----></span>
        </button>
        <!---->
        <!--teleport start-->
        <!---->
        <!--teleport end--><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">New team<!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">Ctrl</kbd><kbd class="">n</kbd></span>
          <!----></span>
        </button>
      </div>
      <div role="group" aria-labelledby="akar-menu-group-v-0-0-5" data-slot="group" class=""><a href="https://github.com/vinicunca/pohon" role="menuitem" tabindex="-1" rel="noopener noreferrer" target="_blank" data-slot="item" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">GitHub<span class="iconify i-lucide:arrow-up-right" aria-hidden="true" data-slot="itemLabelExternalIcon"></span></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!----></span>
        </a><a href="/components/dropdown-menu" role="menuitem" tabindex="-1" data-slot="item" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">Support<!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!----></span>
        </a>
        <div role="separator" aria-orientation="horizontal" data-slot="separator" class=""></div><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">Keyboard Shortcuts<!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!----></span>
        </button><button type="button" disabled="" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="" aria-disabled="true" data-disabled="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">API<!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!----></span>
        </button>
      </div>
      <div role="group" aria-labelledby="akar-menu-group-v-0-0-6" data-slot="group" class=""><button type="button" data-slot="item" role="menuitem" tabindex="-1" data-akar-collection-item="">Item leading slot<span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class="">Logout<!--v-if--></span>
          <!--v-if--></span><span data-slot="itemTrailing" class=""><span data-slot="itemTrailingKbds" class=""><kbd class="">⇧</kbd><kbd class="">Ctrl</kbd><kbd class="">q</kbd></span>
          <!----></span>
        </button></div>
    </div>
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;
